Added components and tests.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Devies Reads",
-  "name": "Devies Read Sample",
+  "short_name": "Devies reads",
+  "name": "Devies reads",
   "icons": [
     {
       "src": "favicon.ico",
